2013-09-06  Per Bothner  <per@bothner.com>

	* misc-test.scm (make-mf): Update since string<? is now less
	lenient.

	* srfi-38-test.scm: Use write-shared to match R7RS semantics.

2013-09-05  Per Bothner  <per@bothner.com>

	* lib-test.scm: Fix thinko in bytevector constructor.

2013-09-04  Per Bothner  <per@bothner.com>

	* mac-test.scm: New test for Savannah bug #39946
	"NullPointerException when using syntax->datum".

	* misc-test.scm: New test-case from Savannah bug report #39944
	"Possible bug with omitted keyword arguments" which currently passes.

2013-08-25  Per Bothner  <per@bothner.com>

	* misc-test.scm: Add test that '#' is a terminator.

2013-07-26  Per Bothner  <per@bothner.com>

	* formatst.scm: New tests for adjacent formats, and using values.
	* srfi-109-test.scm: Tweak expected output for format changes.

2013-07-18  Alex Moiseenko <imdagger@yandex.ru>
	    Per Bothner  <per@bothner.com>

	* sva38026.scm: New test for Savannah bug #38026
	"Mixed variables scope".
	* Makefile.am: Update accordingly.

2013-07-18  Matthieu Vachon  <matthieu.o.vachon@gmail.com>
	    Per Bothner  <per@bothner.com>

	* sva39150.scm: New test for Savannah bug #39150
	"AppendValue procedure compiler InternalError".
	* Makefile.am: Update accordingly.

2013-07-16  Per Bothner  <per@bothner.com>

	* mac-test.scm: Add test for Savannah bug #39501
	"invalid use of unquote-splicing".

2013-07-11  Per Bothner  <per@bothner.com>

	* inlining.expected: Update results.

2013-06-30  Matthieu Vachon  <matthieu.o.vachon@gmail.com>
	    Per Bothner  <per@bothner.com>

	* sva39060.scm: New test for Savannah bug #39060
	"ClassFormatException (Absent Code attribute)".
	* Makefile.ma: Update accordingly.

2013-06-29  Per Bothner  <per@bothner.com>

	* misc.test.scm: Add some tests for non-canonical Booleans.

2013-06-28  John Cowan  <cowan@mercury.ccil.org>
	    Per Bothner  <per@bothner.com>

	* defclass2.scm: New test for non-simple inheritace
	in immediate line-by-line mode.